{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 354,
  "lineage": "8a89bf62-2869-2c64-c9c9-f83b277150d7",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:565120480879:loadbalancer/app/dev-alb/0b8a67f92e8d3ce1",
            "arn_suffix": "app/dev-alb/0b8a67f92e8d3ce1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-alb-1933870704.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:565120480879:loadbalancer/app/dev-alb/0b8a67f92e8d3ce1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-alb",
            "security_groups": [
              "sg-05f944424d7f16fd5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0441a16576a530c12"
              },
              {
                "subnet_id": "subnet-09e69f7b71949ec05"
              }
            ],
            "subnets": [
              "subnet-0441a16576a530c12",
              "subnet-09e69f7b71949ec05"
            ],
            "tags": {
              "Name": "dev-alb"
            },
            "tags_all": {
              "Name": "dev-alb"
            },
            "vpc_id": "vpc-0b12db2287a2e0e05",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.sg.aws_security_group.public_sg_1",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_lis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:565120480879:listener/app/dev-alb/0b8a67f92e8d3ce1/3278ba0e8a807904",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:565120480879:targetgroup/tf-20220429052619898200000001/ecb4bf71337b7f30",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:565120480879:listener/app/dev-alb/0b8a67f92e8d3ce1/3278ba0e8a807904",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:565120480879:loadbalancer/app/dev-alb/0b8a67f92e8d3ce1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available",
            "module.sg.aws_security_group.public_sg_1",
            "module.alb.aws_alb.alb",
            "module.alb.aws_alb_target_group.alb_tg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:565120480879:targetgroup/tf-20220429052619898200000001/ecb4bf71337b7f30",
            "arn_suffix": "targetgroup/tf-20220429052619898200000001/ecb4bf71337b7f30",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:565120480879:targetgroup/tf-20220429052619898200000001/ecb4bf71337b7f30",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20220429052619898200000001",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b12db2287a2e0e05"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "privateInstance01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:565120480879:targetgroup/tf-20220429052619898200000001/ecb4bf71337b7f30-20220429052821995800000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:565120480879:targetgroup/tf-20220429052619898200000001/ecb4bf71337b7f30",
            "target_id": "i-086c627c1db2a1ff1"
          },
          "dependencies": [
            "module.network.aws_route_table_association.public_rtb_association",
            "module.network.aws_vpc_endpoint_route_table_association.privateRTbEndpoint",
            "module.sg.aws_security_group.private_ec2_sg_1",
            "module.sg.aws_security_group.public_sg_1",
            "module.alb.aws_alb_target_group.alb_tg",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rtb",
            "module.network.aws_vpc.vpc",
            "module.network.aws_vpc_endpoint_route_table_association.public_rtb_endpoint",
            "module.network.aws_route_table_association.private_rtb_association",
            "module.network.aws_route_table_association.rds_rtb_association",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_subnet.rds_private_subnet",
            "module.network.aws_route_table.private_rtb",
            "module.network.aws_vpc_endpoint.s3",
            "module.network.data.aws_availability_zones.available",
            "module.ec2.aws_instance.ec2",
            "module.ec2.data.aws_ami.amazonLinux",
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.ngw",
            "module.network.aws_route.private_route"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:565120480879:targetgroup/tf-20220429052619898200000001/ecb4bf71337b7f30-20220429052821864000000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:565120480879:targetgroup/tf-20220429052619898200000001/ecb4bf71337b7f30",
            "target_id": "i-02e6d0fa6e8fe6f8b"
          },
          "dependencies": [
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc",
            "module.network.aws_vpc_endpoint.s3",
            "module.ec2.aws_instance.ec2",
            "module.ec2.data.aws_ami.amazonLinux",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_subnet.rds_private_subnet",
            "module.network.aws_vpc_endpoint_route_table_association.public_rtb_endpoint",
            "module.alb.aws_alb_target_group.alb_tg",
            "module.network.aws_eip.nat_eip",
            "module.network.aws_route_table.private_rtb",
            "module.network.aws_route_table_association.public_rtb_association",
            "module.network.aws_route_table_association.rds_rtb_association",
            "module.network.aws_subnet.private_subnet",
            "module.sg.aws_security_group.private_ec2_sg_1",
            "module.sg.aws_security_group.public_sg_1",
            "module.network.aws_nat_gateway.ngw",
            "module.network.aws_route.private_route",
            "module.network.aws_route_table.public_rtb",
            "module.network.aws_route_table_association.private_rtb_association",
            "module.network.aws_vpc_endpoint_route_table_association.privateRTbEndpoint",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0387b0d09183a3a97",
            "arn": "arn:aws:ec2:ap-northeast-1:565120480879:instance/i-086c627c1db2a1ff1",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-086c627c1db2a1ff1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "publicTestKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d594feeff92a0687",
            "private_dns": "ip-202-2-10-242.ap-northeast-1.compute.internal",
            "private_ip": "202.2.10.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "dev-private-ec2-1-vloume-1"
                },
                "throughput": 125,
                "volume_id": "vol-0861f4292eec992cf",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-035e729846d1deed5",
            "tags": {
              "Name": "dev-private-ec2-1"
            },
            "tags_all": {
              "Name": "dev-private-ec2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bf1d0db7c4339608"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_subnet.rds_private_subnet",
            "module.network.aws_vpc_endpoint_route_table_association.public_rtb_endpoint",
            "module.ec2.data.aws_ami.amazonLinux",
            "module.network.aws_route_table_association.private_rtb_association",
            "module.network.aws_nat_gateway.ngw",
            "module.network.aws_route.private_route",
            "module.network.aws_route_table.public_rtb",
            "module.network.aws_route_table_association.public_rtb_association",
            "module.network.data.aws_availability_zones.available",
            "module.sg.aws_security_group.private_ec2_sg_1",
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc_endpoint.s3",
            "module.network.aws_vpc_endpoint_route_table_association.privateRTbEndpoint",
            "module.network.aws_route_table.private_rtb",
            "module.network.aws_subnet.private_subnet",
            "module.sg.aws_security_group.public_sg_1",
            "module.network.aws_route_table_association.rds_rtb_association",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0387b0d09183a3a97",
            "arn": "arn:aws:ec2:ap-northeast-1:565120480879:instance/i-02e6d0fa6e8fe6f8b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02e6d0fa6e8fe6f8b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "publicTestKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0544b6d021042fa7a",
            "private_dns": "ip-202-2-11-23.ap-northeast-1.compute.internal",
            "private_ip": "202.2.11.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "dev-private-ec2-2-vloume-1"
                },
                "throughput": 125,
                "volume_id": "vol-06fde5b648e21726b",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09d9035239ddab0c3",
            "tags": {
              "Name": "dev-private-ec2-2"
            },
            "tags_all": {
              "Name": "dev-private-ec2-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bf1d0db7c4339608"
            ]
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.ngw",
            "module.network.aws_vpc_endpoint_route_table_association.privateRTbEndpoint",
            "module.network.data.aws_availability_zones.available",
            "module.network.aws_route_table.public_rtb",
            "module.network.aws_route_table_association.private_rtb_association",
            "module.network.aws_subnet.rds_private_subnet",
            "module.network.aws_vpc.vpc",
            "module.network.aws_vpc_endpoint.s3",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc_endpoint_route_table_association.public_rtb_endpoint",
            "module.sg.aws_security_group.private_ec2_sg_1",
            "module.ec2.data.aws_ami.amazonLinux",
            "module.network.aws_route.private_route",
            "module.network.aws_route_table.private_rtb",
            "module.network.aws_route_table_association.public_rtb_association",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_eip.nat_eip",
            "module.network.aws_route_table_association.rds_rtb_association",
            "module.sg.aws_security_group.public_sg_1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0075329a9a05d82c1",
            "association_id": "eipassoc-0947f9744dfb3b50e",
            "domain": "vpc",
            "id": "eipalloc-0075329a9a05d82c1",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0762be863da035818",
            "private_dns": "ip-202-2-0-43.ap-northeast-1.compute.internal",
            "private_ip": "202.2.0.43",
            "public_dns": "ec2-35-74-138-213.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.74.138.213",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-ngw-eip"
            },
            "tags_all": {
              "Name": "dev-ngw-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565120480879:internet-gateway/igw-02e0b3b452fa3c7fc",
            "id": "igw-02e0b3b452fa3c7fc",
            "owner_id": "565120480879",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0b12db2287a2e0e05"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0075329a9a05d82c1",
            "connectivity_type": "public",
            "id": "nat-0c0e2568e856929e2",
            "network_interface_id": "eni-0762be863da035818",
            "private_ip": "202.2.0.43",
            "public_ip": "35.74.138.213",
            "subnet_id": "subnet-0441a16576a530c12",
            "tags": {
              "Name": "dev-ngw"
            },
            "tags_all": {
              "Name": "dev-ngw"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08518f671bbc21c651080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c0e2568e856929e2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08518f671bbc21c65",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available",
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.ngw",
            "module.network.aws_route_table.private_rtb"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565120480879:route-table/rtb-08518f671bbc21c65",
            "id": "rtb-08518f671bbc21c65",
            "owner_id": "565120480879",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c0e2568e856929e2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-rtb"
            },
            "tags_all": {
              "Name": "dev-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b12db2287a2e0e05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565120480879:route-table/rtb-07bc765b49470ac8e",
            "id": "rtb-07bc765b49470ac8e",
            "owner_id": "565120480879",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02e0b3b452fa3c7fc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-rtb"
            },
            "tags_all": {
              "Name": "dev-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b12db2287a2e0e05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rtb_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c832ad87fa38d08",
            "route_table_id": "rtb-08518f671bbc21c65",
            "subnet_id": "subnet-035e729846d1deed5"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.aws_route_table.private_rtb",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03606e2bb55faf04e",
            "route_table_id": "rtb-08518f671bbc21c65",
            "subnet_id": "subnet-09d9035239ddab0c3"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available",
            "module.network.aws_route_table.private_rtb",
            "module.network.aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rtb_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d3217898307f105",
            "route_table_id": "rtb-07bc765b49470ac8e",
            "subnet_id": "subnet-0441a16576a530c12"
          },
          "dependencies": [
            "module.network.aws_route_table.public_rtb",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available",
            "module.network.aws_internet_gateway.igw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0831ad63f6f6f4385",
            "route_table_id": "rtb-07bc765b49470ac8e",
            "subnet_id": "subnet-09e69f7b71949ec05"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rtb",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rds_rtb_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03622cf76b6737ff7",
            "route_table_id": "rtb-08518f671bbc21c65",
            "subnet_id": "subnet-0087594c2fe055c89"
          },
          "dependencies": [
            "module.network.aws_subnet.rds_private_subnet",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available",
            "module.network.aws_route_table.private_rtb"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c3536cbec4dcd2d",
            "route_table_id": "rtb-08518f671bbc21c65",
            "subnet_id": "subnet-0a91f78dd9788ab9c"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available",
            "module.network.aws_route_table.private_rtb",
            "module.network.aws_subnet.rds_private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565120480879:subnet/subnet-035e729846d1deed5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "202.2.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035e729846d1deed5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565120480879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-subnet-1"
            },
            "tags_all": {
              "Name": "dev-private-subnet-1"
            },
            "vpc_id": "vpc-0b12db2287a2e0e05"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565120480879:subnet/subnet-09d9035239ddab0c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "202.2.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d9035239ddab0c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565120480879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-subnet-2"
            },
            "tags_all": {
              "Name": "dev-private-subnet-2"
            },
            "vpc_id": "vpc-0b12db2287a2e0e05"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565120480879:subnet/subnet-0441a16576a530c12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "202.2.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0441a16576a530c12",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565120480879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-subnet-1"
            },
            "tags_all": {
              "Name": "dev-public-subnet-1"
            },
            "vpc_id": "vpc-0b12db2287a2e0e05"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565120480879:subnet/subnet-09e69f7b71949ec05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "202.2.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e69f7b71949ec05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565120480879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-subnet-2"
            },
            "tags_all": {
              "Name": "dev-public-subnet-2"
            },
            "vpc_id": "vpc-0b12db2287a2e0e05"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565120480879:subnet/subnet-0087594c2fe055c89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "202.2.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0087594c2fe055c89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565120480879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-rds-subnet-1"
            },
            "tags_all": {
              "Name": "dev-rds-subnet-1"
            },
            "vpc_id": "vpc-0b12db2287a2e0e05"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565120480879:subnet/subnet-0a91f78dd9788ab9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "202.2.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a91f78dd9788ab9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565120480879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-rds-subnet-2"
            },
            "tags_all": {
              "Name": "dev-rds-subnet-2"
            },
            "vpc_id": "vpc-0b12db2287a2e0e05"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565120480879:vpc/vpc-0b12db2287a2e0e05",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "202.2.0.0/16",
            "default_network_acl_id": "acl-03afa91d2bf576e4d",
            "default_route_table_id": "rtb-0ae5beb1388e4626d",
            "default_security_group_id": "sg-05f9a7f88ad8f1e96",
            "dhcp_options_id": "dopt-045f7463",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b12db2287a2e0e05",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ae5beb1388e4626d",
            "owner_id": "565120480879",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565120480879:vpc-endpoint/vpce-0e581952d4e4c73a9",
            "cidr_blocks": [
              "52.219.195.0/24",
              "3.5.152.0/21",
              "52.219.0.0/20",
              "52.219.200.0/24",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.68.0/22",
              "52.219.172.0/22"
            ],
            "id": "vpce-0e581952d4e4c73a9",
            "owner_id": "565120480879",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-07bc765b49470ac8e",
              "rtb-08518f671bbc21c65"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "state": "available",
            "tags": {
              "Name": "dev-s3-endpoint"
            },
            "tags_all": {
              "Name": "dev-s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0b12db2287a2e0e05"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_ec2_sg_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565120480879:security-group/sg-0bf1d0db7c4339608",
            "description": "Allow HTTP from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf1d0db7c4339608",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05f944424d7f16fd5"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private-ec2-sg-1",
            "name_prefix": "",
            "owner_id": "565120480879",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b12db2287a2e0e05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.sg.aws_security_group.public_sg_1"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_rds_sg_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565120480879:security-group/sg-0a4dc054ea82dcf95",
            "description": "Allow HTTP from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a4dc054ea82dcf95",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bf1d0db7c4339608"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "private-rds-sg-01",
            "name_prefix": "",
            "owner_id": "565120480879",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b12db2287a2e0e05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.sg.aws_security_group.private_ec2_sg_1",
            "module.sg.aws_security_group.public_sg_1"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565120480879:security-group/sg-05f944424d7f16fd5",
            "description": "Allow all HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f944424d7f16fd5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-sg-1",
            "name_prefix": "",
            "owner_id": "565120480879",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b12db2287a2e0e05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}